mux-compiler/tests/snapshots/parser_integration__legacy_ast_counter.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: AutoDecl(
                "count",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            0,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "increment",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: Identifier(
                                        "count",
                                    ),
                                    span: Span,
                                },
                                op: Assign,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Binary {
                                        left: ExpressionNode {
                                            kind: Identifier(
                                                "count",
                                            ),
                                            span: Span,
                                        },
                                        op: Add,
                                        op_span: Span,
                                        right: ExpressionNode {
                                            kind: Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                    },
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Identifier(
                                    "count",
                                ),
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "get_count",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Identifier(
                                    "count",
                                ),
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
