mux-compiler/tests/snapshots/parser_integration__legacy_ast_enum_c_style.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Enum {
        name: "Color",
        type_params: [],
        variants: [
            EnumVariant {
                name: "Red",
                data: None,
                where_clause: None,
            },
            EnumVariant {
                name: "Green",
                data: None,
                where_clause: None,
            },
            EnumVariant {
                name: "Blue",
                data: None,
                where_clause: None,
            },
        ],
        span: Span,
    },
    Function(
        FunctionNode {
            name: "show",
            type_params: [],
            params: [
                Param {
                    name: "c",
                    type_: TypeNode {
                        kind: Named(
                            "Color",
                            [],
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Match {
                        expr: ExpressionNode {
                            kind: Identifier(
                                "c",
                            ),
                            span: Span,
                        },
                        arms: [
                            MatchArm {
                                pattern: Identifier(
                                    "Red",
                                ),
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "red",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            MatchArm {
                                pattern: Identifier(
                                    "Green",
                                ),
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "green",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            MatchArm {
                                pattern: Identifier(
                                    "Blue",
                                ),
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "blue",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                        ],
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "show",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "Color",
                                                ),
                                                span: Span,
                                            },
                                            field: "Red",
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "show",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "Color",
                                                ),
                                                span: Span,
                                            },
                                            field: "Green",
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "show",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "Color",
                                                ),
                                                span: Span,
                                            },
                                            field: "Blue",
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "c",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: FieldAccess {
                                expr: ExpressionNode {
                                    kind: Identifier(
                                        "Color",
                                    ),
                                    span: Span,
                                },
                                field: "Blue",
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "show",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "c",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
